--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,22 +1,25 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<form *ngIf="registerForm" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <label for="id">ת.ז  <span> *</span></label>
     <input type="number" formControlName="id">
-    <!-- <div *ngIf="registerForm.get('id').errors?.invalidIdNumber" class="error-message">תעודת הזהות לא תקינה</div> -->
-    <div *ngIf="registerForm.get('id').invalid && (registerForm.get('id').dirty || registerForm.get('id').touched)" class="error-message">תעודת הזהות אינה חוקית</div>
+    <div *ngIf="registerForm.get('id').invalid && (registerForm.get('id').dirty)" class="error-message">תעודת הזהות אינה חוקית</div>
 
-    <label for="name">שם</label>
+    <label for="name">שם  <span> *</span></label>
     <input type="text" formControlName="name" placeholder="{{userService.name$.value}}">
-     <!-- <div *ngIf="registerForm.get('name').errors?.required" class="error-message">שם הוא שדה חובה</div>  -->
      <div *ngIf="registerForm.get('name').invalid && (registerForm.get('name').dirty || registerForm.get('name').touched)" class="error-message">שם הוא שדה חובה</div>
 
-    <label for="address">כתובת</label>
+    <label for="address">כתובת <span> *</span></label>
     <input type="text" formControlName="address">
+    <div *ngIf="registerForm.get('address').invalid && (registerForm.get('address').dirty || registerForm.get('address').touched)" class="error-message">כתובת הוא שדה חובה</div>
 
-    <label for="mail">כתובת מייל</label>
+    <label for="mail">כתובת מייל <span> *</span></label>
     <input type="text" formControlName="mail">
+    <div *ngIf="registerForm.get('mail').invalid && (registerForm.get('mail').dirty || registerForm.get('mail').touched)" class="error-message">כתובת אימיל הוא שדה חובה</div>
 
-    <label for="password">סיסמה</label>
+
+    <label for="password">סיסמה <span> *</span></label>
     <input type="password" formControlName="password">
+    <div *ngIf="registerForm.get('password').invalid && (registerForm.get('password').dirty || registerForm.get('password').touched)" class="error-message"> סיסמא הוא שדה חובה</div>
+
 
     <button type="submit">שליחה</button>
 </form> 
