--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -3,17 +3,15 @@
     <input type="number" formControlName="id">
     <div *ngIf="registerForm.get('id').invalid && (registerForm.get('id').dirty)" class="error-message">תעודת הזהות אינה חוקית</div>
 
-    <label for="name">שם  <span> *</span></label>
+    <label for="name">שם <span> *</span></label>
     <input type="text" formControlName="name" placeholder="{{userService.name$.value}}">
      <div *ngIf="registerForm.get('name').invalid && (registerForm.get('name').dirty || registerForm.get('name').touched)" class="error-message">שם הוא שדה חובה</div>
 
-    <label for="address">כתובת <span> *</span></label>
+    <label for="address">כתובת </label>
     <input type="text" formControlName="address">
-    <div *ngIf="registerForm.get('address').invalid && (registerForm.get('address').dirty || registerForm.get('address').touched)" class="error-message">כתובת הוא שדה חובה</div>
 
-    <label for="mail">כתובת מייל <span> *</span></label>
+    <label for="mail">כתובת מייל </label>
     <input type="text" formControlName="mail">
-    <div *ngIf="registerForm.get('mail').invalid && (registerForm.get('mail').dirty || registerForm.get('mail').touched)" class="error-message">כתובת אימיל הוא שדה חובה</div>
 
 
     <label for="password">סיסמה <span> *</span></label>
